--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://talpasolutions.join.com/jobs/474281-devops-programmer'>Job @ talpasolutions (Essen): DevOps Programmer | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/ringcentral/job/oCXrbfwV'>RingCentral Careers - DevOps</a></h5> 
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -180,7 +184,7 @@
 <p><span class="badge badge-light">Luxembourg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569207-stage-devops-f-h'>Groupe CANAL+ STAGE - Devops - F/H | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569207-stage-devops-f-h'>Groupe CANAL+ STAGE - Devops - F/H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -202,7 +206,7 @@
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698559111-devops-engineer'>Infotree Service Inc DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698559111-devops-engineer'>Infotree Service Inc DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -246,7 +250,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698538807-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698538807-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -254,7 +258,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer--devops-engineer-1808333/?gh_src=82a8057f1'>Site Reliability Engineer/ DevOps Engineer | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer--devops-engineer-1808333/?gh_src=82a8057f1'>Site Reliability Engineer/ DevOps Engineer | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -378,13 +382,13 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tempo.recruiterbox.com/jobs/fk06zck'>
+<h5><a href='http://tempo.recruiterbox.com/jobs/fk06zck'>
     Lead DevOps Engineer at Tempo
 </a></h5> 
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ghr.wd1.myworkdayjobs.com/Lateral-US/job/Addison/DevOps-Engineer---Continuous-Integration-Continuous-Delivery_19069159'>DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... The Continuous Integration/Continuous Delivery DevOps Engineer will join an 
 agile service team focused on daily production service delivery and application?...</p>
@@ -431,7 +435,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://moduscreate.applytojob.com/apply/JVYKAUdSxF/Senior-DevOps-Engineer-Multiple-Countries'>Senior DevOps Engineer - Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/JVYKAUdSxF/Senior-DevOps-Engineer-Multiple-Countries'>Senior DevOps Engineer - Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -457,10 +461,6 @@ agile service team focused on daily production service delivery and application?
 <hr/>
 <h5><a href='http://orbitpeople.applytojob.com/apply/oHWBYGP2jX/AWSCloudDevOps-Engineer'>AWS/Cloud/DevOps Engineer - Orb IT People - Career Page</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/stars-group/job/ogyrbfwa'>The Stars Group Careers - Graduate DevOps Engineer</a></h5> 
-<p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
