--- a/frontend.html
+++ b/frontend.html
@@ -102,7 +102,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/front-end-developer-14087'>Front End Developer - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/front-end-developer-14087'>Front End Developer - Experian Careers</a></h5> 
 <p><span class="badge badge-light">Tennessee United States  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -122,7 +122,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lucid/e514556b-599c-4d07-97ad-61b02e02e6c5'>Lucid - Sr. Manager, FrontEnd Engineering</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lucid/e514556b-599c-4d07-97ad-61b02e02e6c5'>Lucid - Sr. Manager, FrontEnd Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -192,7 +192,7 @@
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/grow99/jobs/4461465002'>Job Application for Senior Frontend Engineer at Grow Mobility</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/grow99/jobs/4461465002'>Job Application for Senior Frontend Engineer at Grow Mobility</a></h5> 
 <p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -210,7 +210,7 @@
 <p><span class="badge badge-light">Utrecht</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/18507-Front-End-Developer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/18507-Front-End-Developer?source=twitter'>
       Front End Developer at Moixa Technology - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -232,7 +232,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://skatedeluxe.join.com/jobs/454760-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Jena): Frontend Entwi... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skatedeluxe.join.com/jobs/454760-frontend-entwickler-w-m-d'>Job @ skatedeluxe Skateshop (Jena): Frontend Entwi... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -254,11 +254,11 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tedconferencesllc.applytojob.com/apply/9td5jDSovf/Frontend-Engineer?utm_source=TED+Staff+for+Technically+Speaking&utm_campaign=a844a204d5-EMAIL_CAMPAIGN_2019_10_29_01_29&utm_medium=email&utm_term=0_3b164e9b38-a844a204d5-302500633'>Front-end Engineer - TED Conferences LLC - Career Page</a></h5> 
+<h5><a href='https://tedconferencesllc.applytojob.com/apply/9td5jDSovf/Frontend-Engineer?utm_source=TED+Staff+for+Technically+Speaking&utm_campaign=a844a204d5-EMAIL_CAMPAIGN_2019_10_29_01_29&utm_medium=email&utm_term=0_3b164e9b38-a844a204d5-302500633'>Front-end Engineer - TED Conferences LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mindcurv.applytojob.com/apply/L5PvuvCm75/Developer-Front-End'>Developer Front End - mindcurv - Career Page</a></h5> 
+<h5><a href='http://mindcurv.applytojob.com/apply/L5PvuvCm75/Developer-Front-End'>Developer Front End - mindcurv - Career Page</a></h5> 
 <p><span class="badge badge-light">Kerala, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -314,13 +314,13 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://parent.recruitee.com/o/senior-frontend-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://parent.recruitee.com/o/senior-frontend-developer'>
       Senior Frontend Developer - Parent ApS
     </a></h5> 
 <p><span class="badge badge-light">Cairo, Egypt</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/front-end-software-engineer-12379'>Front-end Software Engineer - Akamai Careers</a></h5> 
+<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/front-end-software-engineer-12379'>Front-end Software Engineer - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -358,7 +358,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698289067-senior-software-engineer-front-end'>Optimizely Senior Software Engineer, Front End | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -398,7 +398,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -418,7 +418,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937506'>Job Application for Software Engineer II, Front End at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937506'>Job Application for Software Engineer II, Front End at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -448,7 +448,7 @@
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698518027-web-front-end-engineer-for-global-sportswear-brand'>Aroghia Group Web Front End Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698518027-web-front-end-engineer-for-global-sportswear-brand'>Aroghia Group Web Front End Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
